--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+:root {
+  --a: #add8e6;
+  --primary-bg: #333;
+  --text-shadow: rgba(0, 0, 0, 0.5);
+}
+html,
+body {
+  height: 100%;
+
+  background-color: var(--primary-bg); 
+}
+
+body {
+  display: flex;
+  color: #fff;
+  display: -ms-flexbox;
+  text-shadow: 0 0.05rem 0.1rem var(--text-shadow);
+  box-shadow: inset 0 0 5rem var(--text-shadow);
+}
+
 a,
 a:focus,
 a:hover {
@@ -7,28 +27,16 @@ a:hover {
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #333;
   text-shadow: none;
   background-color: #fff;
+  color: var(--primary-bg);
   border: 0.05rem solid #fff;
 }
 
-html,
-body {
-  height: 100%;
-  background-color: #333;
-}
-
-body {
-  display: flex;
-  color: #fff;
-  display: -ms-flexbox;
-  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
-}
-
 .cover-container {
-  max-width: 42em;
+  position: absolute;
+  border-radius: 20px;
+  left: 25vw;
 }
 
 .masthead {
@@ -42,8 +50,8 @@ body {
 .nav-masthead .nav-link {
   font-weight: 700;
   padding: 0.25rem 0;
-  color: rgba(255, 255, 255, 0.5);
   background-color: transparent;
+  color: rgba(255, 255, 255, 0.5);
   border-bottom: 0.25rem solid transparent;
 }
 
@@ -89,14 +97,12 @@ body {
 }
 
 #tweetBody > a {
-  width: 75%;
-  
-  color: #add8e6;
+  color: var(--a);
 }
 
 [contenteditable="true"]:empty:before {
-  content: attr(placeholder);
   display: block;
+  content: attr(placeholder);
 }
 
 ul {
@@ -104,5 +110,61 @@ ul {
 }
 
 li > a {
-  color: #add8e6;
+  color: var(--a);
 }
+
+#tweetBody {
+  text-align: center;
+  /* animation-name: spin, depth; */
+  animation-duration: 10s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(-360deg);
+  }
+}
+@keyframes depth {
+  0% {
+    text-shadow: 0 0 black;
+  }
+  25% {
+    text-shadow: 1px 0 black, 2px 0 black, 3px 0 black, 4px 0 black, 5px 0 black;
+  }
+  50% {
+    text-shadow: 0 0 black;
+  }
+  75% {
+    text-shadow: -1px 0 black, -2px 0 black, -3px 0 black, -4px 0 black,
+      -5px 0 black;
+  }
+  100% {
+    text-shadow: 0 0 black;
+  }
+}
+
+canvas {
+  display: block;
+  width: 100vw;
+  height: 100vh;
+}
+body, html {
+  background-color: #000;
+  color: #fff;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+/* canvas {
+  position:absolute;
+  top:0;
+  left:0;
+  z-index: -1;
+} */
