--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,4 @@
-:root {
-  --a: #add8e6;
-  --primary-bg: #333;
-  --text-shadow: rgba(0, 0, 0, 0.5);
-}
-html,
+  html,
 body {
   height: 100%;
 
@@ -17,8 +12,10 @@ body {
   text-shadow: 0 0.05rem 0.1rem var(--text-shadow);
   box-shadow: inset 0 0 5rem var(--text-shadow);
 }
+a {
+  color: var(--a);    
+}
 
-a,
 a:focus,
 a:hover {
   color: #fff;
@@ -96,9 +93,6 @@ a:hover {
   border: 1px solid white;
 }
 
-#tweetBody > a {
-  color: var(--a);
-}
 
 [contenteditable="true"]:empty:before {
   display: block;
@@ -107,10 +101,6 @@ a:hover {
 
 ul {
   list-style: none;
-}
-
-li > a {
-  color: var(--a);
 }
 
 #tweetBody {
