--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,13 @@ a:hover {
   padding: 15px;
   border-radius: 10px;
   border: 1px solid white;
+  transition-duration: 2s;
+}
+
+#tweetBody {
+  padding: 15px;
+  border-radius: 10px;
+  border: 1px solid white;
 }
 
 [contenteditable="true"]:empty:before {
@@ -113,6 +120,53 @@ ul {
   /* animation-name: spin, depth; */
   animation-duration: 10s;
   animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+canvas {
+  width: 100vw;
+  height: 100vh;
+  display: block;
+}
+body,
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  overflow: hidden;
+  background-color: #000;
+}
+/* canvas {
+  top:0;
+  left:0;
+  z-index: -1;
+  position:absolute;
+} */
+
+.btn {
+  margin-top: 100px;
+}
+
+.btn-block:hover {
+  color: white;
+}
+
+.magical-button {
+  border: none;
+  outline: none;
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+  padding: 20px 50px;
+  border-radius: 25px;
+  -webkit-text-stroke: 0.2px black;
+  background-color: rgb(255, 0, 0);
+}
+
+.magical-button:hover {
+  animation: rainbow-bg 10s;
   animation-iteration-count: infinite;
 }
 
@@ -143,32 +197,42 @@ ul {
   }
 }
 
-canvas {
-  width: 100vw;
-  height: 100vh;
-  display: block;
-}
-body,
-html {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  color: #fff;
-  overflow: hidden;
-  background-color: #000;
-}
-/* canvas {
-  position:absolute;
-  top:0;
-  left:0;
-  z-index: -1;
-} */
-
-.btn {
-  margin-top: 100px;
-}
-
-.btn-block:hover {
-  color: white;
+@keyframes rainbow-bg {
+  100%,
+  0% {
+    background-color: rgb(255, 0, 0);
+  }
+  8% {
+    background-color: rgb(255, 127, 0);
+  }
+  16% {
+    background-color: rgb(255, 255, 0);
+  }
+  25% {
+    background-color: rgb(127, 255, 0);
+  }
+  33% {
+    background-color: rgb(0, 255, 0);
+  }
+  41% {
+    background-color: rgb(0, 255, 127);
+  }
+  50% {
+    background-color: rgb(0, 255, 255);
+  }
+  58% {
+    background-color: rgb(0, 127, 255);
+  }
+  66% {
+    background-color: rgb(0, 0, 255);
+  }
+  75% {
+    background-color: rgb(127, 0, 255);
+  }
+  83% {
+    background-color: rgb(255, 0, 255);
+  }
+  91% {
+    background-color: rgb(255, 0, 127);
+  }
 }
